# sc-hsm-embedded

src/ctccid/: Makefile.am
src/examples/key-generator/: Makefile.am  libcardservice.exports
